--- a/.github/workflows/ci-manual-run-python-script.yaml
+++ b/.github/workflows/ci-manual-run-python-script.yaml
@@ -50,7 +50,6 @@ jobs:
     - name: Run Python script
       run: |
         cd code
-        pwd
         if [ "${{ env.INFO }}" = "true" ]; then
           python app.py ${{ env.DATA }} --info
         else
@@ -59,14 +58,16 @@ jobs:
     
     - name: Commit report
       run: |
-        pwd
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
         git add output/${{ env.DATA }}.md
-        # Check if report exists in the repository
-        if git ls-tree --name-only HEAD | grep -q "output/${{ env.DATA }}.md"; then
-          git commit -m "Updated ${{ env.DATA }}.md" || echo "No changes to commit"
-        else
-          git commit -m "Created ${{ env.DATA }}.md" || echo "No changes to commit"
+        # Check for staged changes
+        if ! git diff --cached --quiet; then
+          # Check if report exists in the repository
+          if git ls-tree --name-only HEAD | grep -q "output/${{ env.DATA }}.md"; then
+            git commit -m "Updated ${{ env.DATA }}.md"
+          else
+            git commit -m "Created ${{ env.DATA }}.md"
+          fi
+          git push
         fi
-        git push
