--- a/.github/workflows/ci-manual-run-python-script.yaml
+++ b/.github/workflows/ci-manual-run-python-script.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Check data input
       run: |
         # Regex to check if the data input is valid
-        # Only allowed; alphanumeric characters, underscores and hyphens
+        # Must only include; alphanumeric characters, underscores and hyphens
         if [[ ! "${{ env.DATA }}" =~ ^[a-zA-Z0-9_-]+$ ]]; then
           echo "Error: Invalid data input: '${{ env.DATA }}'. Only alphanumeric characters, underscores and hyphens are allowed."
           exit 1
