--- a/.github/workflows/ci-manual-run-python-script.yaml
+++ b/.github/workflows/ci-manual-run-python-script.yaml
@@ -15,7 +15,15 @@ permissions:
   contents: write
 
 jobs:
-  run-script:
+  prevent-main:
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          echo "This workflow is not allowed to run on the main branch."
+          exit 1
+          
+  run-python-script:
     runs-on: ubuntu-latest
 
     env:
