--- a/.github/workflows/ci-manual-run-python-script.yaml
+++ b/.github/workflows/ci-manual-run-python-script.yaml
@@ -47,6 +47,7 @@ jobs:
           git pull origin "$BRANCH"
         else
           git checkout -b "$BRANCH"
+        fi
     
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -56,7 +57,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements.txt ]; then 
+          pip install -r requirements.txt
+        fi
     
     - name: Run Python script
       run: |
