--- a/.github/workflows/ci-manual-run-python-script.yaml
+++ b/.github/workflows/ci-manual-run-python-script.yaml
@@ -91,7 +91,7 @@ jobs:
     - name: Create pull request
       if: github.ref_name == 'main'
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ secrets.GH_PAT }}
       run: |
         # Check for commits
         if git diff --quiet origin/main...HEAD; then
