--- a/.github/workflows/ci-manual-run-python-script.yaml
+++ b/.github/workflows/ci-manual-run-python-script.yaml
@@ -38,6 +38,7 @@ jobs:
     - name: Switch to feature branch
       if: github.ref_name == 'main'
       env:
+        # format() required for concatenating str to env
         BRANCH: ${{ format('feature/{0}', env.DATA) }}
       run: |
         echo "BRANCH=$BRANCH" >> $GITHUB_ENV
