--- a/.github/workflows/ci-manual-run-python-script.yaml
+++ b/.github/workflows/ci-manual-run-python-script.yaml
@@ -35,7 +35,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Switch to feature branch
+    - name: Checkout to feature branch
       if: github.ref_name == 'main'
       env:
         # format() required for concatenating str to env
