--- a/.github/workflows/ci-delete-merged-branch.yaml
+++ b/.github/workflows/ci-delete-merged-branch.yaml
@@ -5,6 +5,9 @@ on:
   pull_request:
     types: [closed]
 
+permissions:
+  contents: write
+
 jobs:
   delete-merged-branch:
     if: github.event.pull_request.merged == true
